tx/build/log/idf_py_stdout_output_12165
Command: ninja flash
[1/11] Performing build step for 'bootloader'
[1/1] cd /home/davey_schoe/esp/mcmb_tx_dv3/build/bootloader/esp-idf/esptool_py && /home/davey_schoe/.espressif/python_env/idf5.5_py3.11_env/bin/python /home/davey_schoe/esp/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 /home/davey_schoe/esp/mcmb_tx_dv3/build/bootloader/bootloader.bin
Bootloader binary size 0x6600 bytes. 0xa00 bytes (9%) free.
[2/11] No install step for 'bootloader'
[3/11] Completed 'bootloader'
[4/11] Building C object esp-idf/src/CMakeFiles/__idf_src.dir/r.c.obj
FAILED: esp-idf/src/CMakeFiles/__idf_src.dir/r.c.obj 
/home/davey_schoe/.espressif/tools/xtensa-esp-elf/esp-14.2.0_20241119/xtensa-esp-elf/bin/xtensa-esp32-elf-gcc -DESP_PLATFORM -DIDF_VER=\"v5.5-dev-1428-g0f0068fff3-dirty\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I/home/davey_schoe/esp/mcmb_tx_dv3/build/config -I/home/davey_schoe/esp/mcmb_tx_dv3/lwmb/include -I/home/davey_schoe/esp/esp-idf/components/newlib/platform_include -I/home/davey_schoe/esp/esp-idf/components/freertos/config/include -I/home/davey_schoe/esp/esp-idf/components/freertos/config/include/freertos -I/home/davey_schoe/esp/esp-idf/components/freertos/config/xtensa/include -I/home/davey_schoe/esp/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/home/davey_schoe/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/home/davey_schoe/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -I/home/davey_schoe/esp/esp-idf/components/freertos/esp_additions/include -I/home/davey_schoe/esp/esp-idf/components/esp_hw_support/include -I/home/davey_schoe/esp/esp-idf/components/esp_hw_support/include/soc -I/home/davey_schoe/esp/esp-idf/components/esp_hw_support/include/soc/esp32 -I/home/davey_schoe/esp/esp-idf/components/esp_hw_support/dma/include -I/home/davey_schoe/esp/esp-idf/components/esp_hw_support/ldo/include -I/home/davey_schoe/esp/esp-idf/components/esp_hw_support/debug_probe/include -I/home/davey_schoe/esp/esp-idf/components/esp_hw_support/mspi_timing_tuning/include -I/home/davey_schoe/esp/esp-idf/components/esp_hw_support/power_supply/include -I/home/davey_schoe/esp/esp-idf/components/esp_hw_support/port/esp32/. -I/home/davey_schoe/esp/esp-idf/components/esp_hw_support/port/esp32/include -I/home/davey_schoe/esp/esp-idf/components/heap/include -I/home/davey_schoe/esp/esp-idf/components/heap/tlsf -I/home/davey_schoe/esp/esp-idf/components/log/include -I/home/davey_schoe/esp/esp-idf/components/soc/include -I/home/davey_schoe/esp/esp-idf/components/soc/esp32 -I/home/davey_schoe/esp/esp-idf/components/soc/esp32/include -I/home/davey_schoe/esp/esp-idf/components/soc/esp32/register -I/home/davey_schoe/esp/esp-idf/components/hal/platform_port/include -I/home/davey_schoe/esp/esp-idf/components/hal/esp32/include -I/home/davey_schoe/esp/esp-idf/components/hal/include -I/home/davey_schoe/esp/esp-idf/components/esp_rom/include -I/home/davey_schoe/esp/esp-idf/components/esp_rom/esp32/include -I/home/davey_schoe/esp/esp-idf/components/esp_rom/esp32/include/esp32 -I/home/davey_schoe/esp/esp-idf/components/esp_rom/esp32 -I/home/davey_schoe/esp/esp-idf/components/esp_common/include -I/home/davey_schoe/esp/esp-idf/components/esp_system/include -I/home/davey_schoe/esp/esp-idf/components/esp_system/port/soc -I/home/davey_schoe/esp/esp-idf/components/esp_system/port/include/private -I/home/davey_schoe/esp/esp-idf/components/xtensa/esp32/include -I/home/davey_schoe/esp/esp-idf/components/xtensa/include -I/home/davey_schoe/esp/esp-idf/components/xtensa/deprecated_include -I/home/davey_schoe/esp/esp-idf/components/lwip/include -I/home/davey_schoe/esp/esp-idf/components/lwip/include/apps -I/home/davey_schoe/esp/esp-idf/components/lwip/include/apps/sntp -I/home/davey_schoe/esp/esp-idf/components/lwip/lwip/src/include -I/home/davey_schoe/esp/esp-idf/components/lwip/port/include -I/home/davey_schoe/esp/esp-idf/components/lwip/port/freertos/include -I/home/davey_schoe/esp/esp-idf/components/lwip/port/esp32xx/include -I/home/davey_schoe/esp/esp-idf/components/lwip/port/esp32xx/include/arch -I/home/davey_schoe/esp/esp-idf/components/lwip/port/esp32xx/include/sys -I/home/davey_schoe/esp/esp-idf/components/esp_driver_gpio/include -I/home/davey_schoe/esp/esp-idf/components/esp_event/include -I/home/davey_schoe/esp/esp-idf/components/esp_eth/include -I/home/davey_schoe/esp/esp-idf/components/esp_driver_spi/include -I/home/davey_schoe/esp/esp-idf/components/esp_pm/include -I/home/davey_schoe/esp/esp-idf/components/esp_netif/include -mlongcalls -Wno-frame-address  -fno-builtin-memcpy -fno-builtin-memset -fno-builtin-bzero -fno-builtin-stpcpy -fno-builtin-strncpy -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-error=extra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fno-shrink-wrap -fmacro-prefix-map=/home/davey_schoe/esp/mcmb_tx_dv3=. -fmacro-prefix-map=/home/davey_schoe/esp/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/src/CMakeFiles/__idf_src.dir/r.c.obj -MF esp-idf/src/CMakeFiles/__idf_src.dir/r.c.obj.d -o esp-idf/src/CMakeFiles/__idf_src.dir/r.c.obj -c /home/davey_schoe/esp/mcmb_tx_dv3/lwmb/src/r.c
/home/davey_schoe/esp/mcmb_tx_dv3/lwmb/src/r.c: In function 'r_select_task':
/home/davey_schoe/esp/mcmb_tx_dv3/lwmb/src/r.c:51:25: error: suggest parentheses around assignment used as truth value [-Werror=parentheses]
   51 |                     if (b=r_accept(r) == 0) {
      |                         ^
/home/davey_schoe/esp/mcmb_tx_dv3/lwmb/src/r.c:9:15: warning: unused variable 'im' [-Wunused-variable]
    9 |     struct m *im;                               // inbound message
      |               ^~
/home/davey_schoe/esp/mcmb_tx_dv3/lwmb/src/r.c: In function 'r_proc':
/home/davey_schoe/esp/mcmb_tx_dv3/lwmb/src/r.c:206:21: error: 'om' undeclared (first use in this function); did you mean 'm'?
  206 |                     om = malloc(sizeof(struct r*)+sizeof(int)+7+2+b);
      |                     ^~
      |                     m
/home/davey_schoe/esp/mcmb_tx_dv3/lwmb/src/r.c:206:21: note: each undeclared identifier is reported only once for each function it appears in
/home/davey_schoe/esp/mcmb_tx_dv3/lwmb/src/r.c: In function 'r_recv':
/home/davey_schoe/esp/mcmb_tx_dv3/lwmb/src/r.c:674:13: error: passing argument 1 of 'memset' makes pointer from integer without a cast [-Wint-conversion]
  674 |     memset(r->ib,0,1+R_IM_SIZE);
      |            ~^~~~
      |             |
      |             int
In file included from /home/davey_schoe/esp/mcmb_tx_dv3/lwmb/include/h.h:10,
                 from /home/davey_schoe/esp/mcmb_tx_dv3/lwmb/src/r.c:1:
/home/davey_schoe/.espressif/tools/xtensa-esp-elf/esp-14.2.0_20241119/xtensa-esp-elf/xtensa-esp-elf/include/string.h:33:18: note: expected 'void *' but argument is of type 'int'
   33 | void *   memset (void *, int, size_t);
      |                  ^~~~~~
/home/davey_schoe/esp/mcmb_tx_dv3/lwmb/src/r.c:677:39: error: 'M_RECV_DATA_SIZE' undeclared (first use in this function)
  677 |     if ((r->ib=recv(r->s,(void*)r->im,M_RECV_DATA_SIZE,0)) < 0) {
      |                                       ^~~~~~~~~~~~~~~~
/home/davey_schoe/esp/mcmb_tx_dv3/lwmb/src/r.c:693:16: error: 'im' undeclared (first use in this function); did you mean 'tm'?
  693 |     } else if (im->b == 0) {
      |                ^~
      |                tm
/home/davey_schoe/esp/mcmb_tx_dv3/lwmb/src/r.c:695:9: error: implicit declaration of function 'r_shut_s'; did you mean 'r_shut'? [-Wimplicit-function-declaration]
  695 |         r_shut_s(r);
      |         ^~~~~~~~
      |         r_shut
/home/davey_schoe/esp/mcmb_tx_dv3/lwmb/src/r.c:696:9: error: implicit declaration of function 'r_close_s'; did you mean 'r_close'? [-Wimplicit-function-declaration]
  696 |         r_close_s(r);
      |         ^~~~~~~~~
      |         r_close
/home/davey_schoe/esp/mcmb_tx_dv3/lwmb/src/r.c: In function 'r_send':
/home/davey_schoe/esp/mcmb_tx_dv3/lwmb/src/r.c:735:13: error: passing argument 1 of 'memset' makes pointer from integer without a cast [-Wint-conversion]
  735 |     memset(r->ob,0,1+R_OM_SIZE);
      |            ~^~~~
      |             |
      |             int
/home/davey_schoe/.espressif/tools/xtensa-esp-elf/esp-14.2.0_20241119/xtensa-esp-elf/xtensa-esp-elf/include/string.h:33:18: note: expected 'void *' but argument is of type 'int'
   33 | void *   memset (void *, int, size_t);
      |                  ^~~~~~
/home/davey_schoe/esp/mcmb_tx_dv3/lwmb/src/r.c: In function 'r_listen':
/home/davey_schoe/esp/mcmb_tx_dv3/lwmb/src/r.c:604:1: error: control reaches end of non-void function [-Werror=return-type]
  604 | }
      | ^
cc1: some warnings being treated as errors
ninja: build stopped: subcommand failed.
